<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:elevation="4dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="12dp">


    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:maxWidth="190dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Movie name" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/_0_8"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="this_is_a_short_description_of_the_moviethis_is_a_short_description_of_the_moviethis_is_a_short_description_of_the_movie"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2024_01_01"
            android:textSize="12sp" />


    </LinearLayout>
</LinearLayout>
